--- a/BienesRaices/index.html
+++ b/BienesRaices/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
 
   <title>Bienes Raices</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -14,7 +16,7 @@
         <a href="/">
           <img src="img/logo.svg" alt="Logotipo de bienes raices">
         </a>
-        <nav>
+        <nav class="navegacion">
           <a href="nosotros.html">Nosotros</a>
           <a href="anuncios.html">Anuncios</a>
           <a href="blog.html">Blog</a>
@@ -116,7 +118,7 @@
   </section>
 
   <footer>
-    <nav>
+    <nav class="navegacion"> 
       <a href="nosotros.html">Nosotros</a>
       <a href="anuncios.html">Anuncios</a>
       <a href="blog.html">Blog</a>
