Se incluye proyecto de cafe

--- a/BienesRaices/nosotros.html
+++ b/BienesRaices/nosotros.html
@@ -1,14 +1,96 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Nosotros</title>
+  <title>Sobre nosotros</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-  <h1>Nosotros</h1>
-  <a href="index.html">Volver</a>
+  <header class="site-header">
+    <div class="contenedor contenido-header">
+      <div class="barra">
+        <a href="/">
+          <img src="img/logo.svg" alt="Logotipo de bienes raices">
+        </a>
+        <nav class="navegacion">
+          <a href="index.html">Inicio</a>
+          <a href="anuncios.html">Anuncios</a>
+          <a href="blog.html">Blog</a>
+          <a href="contacto.html">Contacto</a>
+        </nav>
+      </div> <!-- barra -->
+    </div><!-- contenedor -->
+  </header>
+
+  <main class="contenedor">
+    <h1 class="fw-300 centrar-texto">Conoce sobre nosotros</h1>
+    <div class="contenido-nosotros">
+      <div class="imagen">
+        <img src="img/nosotros.jpg" alt="Imagen sobre nosotros">
+      </div>
+      <div class="texto-nosotros">
+        <blockquote>25 Años de experiencia</blockquote>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam repellat exercitationem earum neque quas sit,
+          soluta consequatur. Laboriosam atque distinctio quis ipsum. Vero saepe pariatur, unde nihil est nostrum enim.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, cumque, nulla perferendis architecto in error
+          quia sed unde odit exercitationem laudantium fugiat alias? Velit aperiam eveniet itaque voluptas, deserunt
+          cum!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam repellat exercitationem earum neque quas sit,
+          soluta consequatur. Laboriosam atque distinctio quis ipsum. Vero saepe pariatur, unde nihil est nostrum enim.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, cumque, nulla perferendis architecto in error
+          quia sed unde odit exercitationem laudantium fugiat alias? Velit aperiam eveniet itaque voluptas, deserunt
+          cum!
+        </p>
+      </div>
+  </main>
+
+  <section class="contenedor seccion">
+    <h2 class="fw-300 centrar-texto">Mas Sobre Nosotros</h2>
+    <div class="iconos-nosotros">
+      <div class="icono">
+        <img src="img/icono1.svg" alt="icono Seguridad">
+        <h3>Seguridad</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptatibus, sunt
+          omnis velit, magni aliquid adipisci minima ducimus accusantium inventore unde et,
+          dolorum sit excepturi doloremque ut autem ipsam tempore!</p>
+      </div>
+
+      <div class="icono">
+        <img src="img/icono2.svg" alt="Icono Mejor Precio">
+        <h3>El mejor precio</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptatibus, sunt
+          omnis velit, magni aliquid adipisci minima ducimus accusantium inventore unde et,
+          dolorum sit excepturi doloremque ut autem ipsam tempore!</p>
+      </div>
+
+      <div class="icono">
+        <img src="img/icono3.svg" alt="A tiempo">
+        <h3>A tiempo</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptatibus, sunt
+          omnis velit, magni aliquid adipisci minima ducimus accusantium inventore unde et,
+          dolorum sit excepturi doloremque ut autem ipsam tempore!</p>
+      </div>
+    </div>
+  </section>
+
+  <footer class="site-footer seccion">
+    <div class="contenedor contenedor-footer">
+      <nav class="navegacion">
+        <a href="index.html">Inicio</a>
+        <a href="anuncios.html">Anuncios</a>
+        <a href="blog.html">Blog</a>
+        <a href="contacto.html">Contacto</a>
+      </nav>
+      <p class="copyright">Todos los Derechos Reservados 2020 &copy;</p>
+    </div>
+  </footer>
+
+
 </body>
+
 </html>
