--- a/BienesRaices/blog.html
+++ b/BienesRaices/blog.html
@@ -1,10 +1,107 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-   
-  <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Blog</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-  
+  <header class="site-header">
+    <div class="contenedor contenido-header">
+      <div class="barra">
+        <a href="/">
+          <img src="img/logo.svg" alt="Logotipo de bienes raices">
+        </a>
+        <nav class="navegacion">
+          <a href="index.html">Inicio</a>
+          <a href="nosotros.html">Nosotros</a>
+          <a href="blog.html">Blog</a>
+          <a href="contacto.html">Contacto</a>
+        </nav>
+      </div> <!-- barra -->
+    </div><!-- contenedor -->
+  </header>
+
+  <main class="contenedor seccion contenido-centrado">
+    <h1 class="fw-300 centrar-texto">Nuestro Blog</h1>
+
+    <article class="entrada-blog">
+      <div class="imagen">
+        <img src="img/blog1.jpg" alt="Entrada de blog">
+      </div>
+      <div class="texto-entrada">
+        <a href="entrada.html">
+          <h4>Terraza en el techo de tu casa</h4>
+        </a>
+        <p>Escrito en: <span>20/10/2019</span> por: <span>Rubén Palos Flores</em></p>
+        <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y ahorando dinero
+        </p>
+      </div>
+    </article>
+
+    <article class="entrada-blog">
+      <div class="imagen">
+        <img src="img/blog2.jpg" alt="Entrada de blog">
+      </div>
+      <div class="texto-entrada">
+        <a href="entrada.html">
+          <h4>Construye una alberca en tu hogar</h4>
+        </a>
+        <p>Escrito en: <span>20/10/2019</span> por: <span>Rubén Palos Flores</span></p>
+        <p>Maximia el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu
+          espacio
+        </p>
+      </div>
+    </article>
+
+    <article class="entrada-blog">
+      <div class="imagen">
+        <img src="img/blog3.jpg" alt="Entrada de blog">
+      </div>
+      <div class="texto-entrada">
+        <a href="entrada.html">
+          <h4>Guia para la decoracion de tu hogar</h4>
+        </a>
+        <p>Escrito en: <span>20/10/2019</span> por: <span>Rubén Palos Flores</span></p>
+        <p>Maximia el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu
+          espacio
+        </p>
+      </div>
+    </article>
+
+    <article class="entrada-blog">
+      <div class="imagen">
+        <img src="img/blog4.jpg" alt="Entrada de blog">
+      </div>
+      <div class="texto-entrada">
+        <a href="entrada.html">
+          <h4>Guia para la decoracion de tu habitación</h4>
+        </a>
+        <p>Escrito en: <span>20/10/2019</span> por: <span>Rubén Palos Flores</span></p>
+        <p>Maximia el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu
+          espacio
+        </p>
+      </div>
+    </article>
+
+  </main>
+
+  <footer class="site-footer seccion">
+    <div class="contenedor contenedor-footer">
+      <nav class="navegacion">
+        <a href="index.html">Inicio</a>
+        <a href="nosotros.html">Nosotros</a>
+        <a href="blog.html">Blog</a>
+        <a href="contacto.html">Contacto</a>
+      </nav>
+      <p class="copyright">Todos los Derechos Reservados 2020 &copy;</p>
+    </div>
+  </footer>
+
 </body>
+
 </html>
