--- a/BienesRaices/index.html
+++ b/BienesRaices/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
 
@@ -11,7 +12,7 @@
 
 <body>
   <header class="site-header inicio">
-    <div class="contenedor">
+    <div class="contenedor contenido-header">
       <div class="barra">
         <a href="/">
           <img src="img/logo.svg" alt="Logotipo de bienes raices">
@@ -28,103 +29,180 @@
     </div><!-- contenedor -->
   </header>
 
-  <section>
+  <section class="contenedor seccion">
+    <h2 class="fw-300 centrar-texto">Mas Sobre Nosotros</h2>
+    <div class="iconos-nosotros">
+      <div class="icono">
+        <img src="img/icono1.svg" alt="icono Seguridad">
+        <h3>Seguridad</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptatibus, sunt
+          omnis velit, magni aliquid adipisci minima ducimus accusantium inventore unde et,
+          dolorum sit excepturi doloremque ut autem ipsam tempore!</p>
+      </div>
 
-    <h2>Mas sobre nosotros</h2>
+      <div class="icono">
+        <img src="img/icono2.svg" alt="Icono Mejor Precio">
+        <h3>El mejor precio</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptatibus, sunt
+          omnis velit, magni aliquid adipisci minima ducimus accusantium inventore unde et,
+          dolorum sit excepturi doloremque ut autem ipsam tempore!</p>
+      </div>
 
-    <div>
-      <img src="img/icono1.svg" alt="icono Seguridad">
-      <h3>Seguridad</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptatibus, sunt
-        omnis velit, magni aliquid adipisci minima ducimus accusantium inventore unde et,
-        dolorum sit excepturi doloremque ut autem ipsam tempore!</p>
-    </div>
-
-    <div>
-      <img src="img/icono2.svg" alt="Icono Mejor Precio">
-      <h3>El mejor precio</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptatibus, sunt
-        omnis velit, magni aliquid adipisci minima ducimus accusantium inventore unde et,
-        dolorum sit excepturi doloremque ut autem ipsam tempore!</p>
-    </div>
-
-    <div>
-      <img src="img/icono3.svg" alt="A tiempo">
-      <h3>A tiempo</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptatibus, sunt
-        omnis velit, magni aliquid adipisci minima ducimus accusantium inventore unde et,
-        dolorum sit excepturi doloremque ut autem ipsam tempore!</p>
+      <div class="icono">
+        <img src="img/icono3.svg" alt="A tiempo">
+        <h3>A tiempo</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptatibus, sunt
+          omnis velit, magni aliquid adipisci minima ducimus accusantium inventore unde et,
+          dolorum sit excepturi doloremque ut autem ipsam tempore!</p>
+      </div>
     </div>
   </section>
 
-  <main>
-    <h2>Capas y Depas en ventas</h2>
-    <div>
-      <img src="img/anuncio1.jpg" alt="Anuncio casa en el lago">
+  <main class="contenedor seccion">
+    <h2 class="fw-300 centrar-texto">Capas y Depas en ventas</h2>
+    <div class="contenedor-anuncios">
+      <div class="anuncio">
+        <img src="img/anuncio1.jpg" alt="Anuncio casa en el lago">
+        <div class="contenido-anuncio">
+          <h3>Casas de lujo en el lago</h3>
+          <p>Casas en el lago con excelente vista, acabados de lujo a un excelente precio</p>
+          <p class="precio">3,000,000.00</p>
+          <ul class="iconos-caracteristicas">
+            <li>
+              <img src="img/icono_wc.svg" alt="">
+              <p>3</p>
+            </li>
+            <li>
+              <img src="img/icono_estacionamiento.svg" alt="">
+              <p>3</p>
+            </li>
+            <li>
+              <img src="img/icono_dormitorio.svg" alt="">
+              <p>4</p>
+            </li>
+          </ul>
+          <a href="anuncio.html" class="boton boton-amarillo d-block">Ver propiedad</a>
+        </div>
+      </div>
 
-      <h3>Casas de lujo en el lago</h3>
-      <p>Casas en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-      <p>3,000,000.00</p>
-      <a href="#">Ver propiedad</a>
-    </div>
+      <div class="anuncio">
+        <img src="img/anuncio2.jpg" alt="Casa de lujo">
+        <div class="contenido-anuncio">
+          <h3>Casa terminados de lujo</h3>
+          <p>Casa con diseño morderno asi como tecnologia inteligente y amuebleada</p>
+          <p class="precio">2,000,000.00</p>
+          <ul class="iconos-caracteristicas">
+            <li>
+              <img src="img/icono_wc.svg" alt="">
+              <p>3</p>
+            </li>
+            <li>
+              <img src="img/icono_estacionamiento.svg" alt="">
+              <p>3</p>
+            </li>
+            <li>
+              <img src="img/icono_dormitorio.svg" alt="">
+              <p>4</p>
+            </li>
+          </ul>
+          <a href="anuncio.html" class="boton boton-amarillo d-block">Ver propiedad</a>
+        </div>
+      </div>
 
-    <div>
-      <img src="img/anuncio2.jpg" alt="Casa de lujo">
-      <h3>Casa con terminados de lujo</h3>
-      <p>Casa con diseño morderno asi como tecnologia inteligente y amuebleada</p>
-      <p>2,000,000.00</p>
-      <a href="#">Ver propiedad</a>
+      <div class="anuncio">
+        <img src="img/anuncio3.jpg" alt="Casa con alberga">
+        <div class="contenido-anuncio">
+          <h3>Casa con alberca amplia</h3>
+          <p>Casa alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
+          <p class="precio">3,000,000.00</p>
+          <ul class="iconos-caracteristicas">
+            <li>
+              <img src="img/icono_wc.svg" alt="">
+              <p>3</p>
+            </li>
+            <li>
+              <img src="img/icono_estacionamiento.svg" alt="">
+              <p>3</p>
+            </li>
+            <li>
+              <img src="img/icono_dormitorio.svg" alt="">
+              <p>4</p>
+            </li>
+          </ul>
+          <a href="anuncio.html" class="boton boton-amarillo d-block">Ver propiedad</a>
+        </div>
+      </div>
     </div>
-
-    <div>
-      <img src="img/anuncio3.jpg" alt="Casa con alberga">
-      <h3>Casa con alberca</h3>
-      <p>Casa alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
-      <p>3,000,000.00</p>
-      <a href="#">Ver propiedad</a>
+    <div class="ver-todas">
+      <a href="anuncios.html" class="boton boton-verde">Ver todas</a>
     </div>
-    <a href="anuncios.html">Ver todas</a>
   </main>
 
-  <section>
-    <h2>Encuentra la casa de tus sueños</h2>
-    <p>Llena el formulario de contacto y un asesor se pondra en contacto contigo a la brevedad</p>
-    <a href="contacto.html">Contactanos</a>
+  <section class="imagen-contacto">
+    <div class="contenedor contenido-contacto">
+      <h2>Encuentra la casa de tus sueños</h2>
+      <p>Llena el formulario de contacto y un asesor se pondra en contacto contigo a la brevedad</p>
+      <a href="contacto.html" class="boton boton-amarillo">Contactanos</a>
+    </div>
   </section>
 
-  <section>
-    <h3>Nuestro blog</h3>
+  <div class="seccion-inferior contenedor seccion">
+    <section class="blog">
+      <h3 class="centrar-texto fw-300">Nuestro blog</h3>
 
-    <article>
-      <img src="img/blog1.jpg" alt="Entrada de blog">
-      <h4>Terraza en el techo de tu casa</h4>
-      <p>Escrito en: <em>20/10/2019</em> por: <em>Rubén Palos Flores</em></p>
-      <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y ahorando dinero</p>
-    </article>
+      <article class="entrada-blog">
+        <div class="imagen">
+          <img src="img/blog1.jpg" alt="Entrada de blog">
+        </div>
+        <div class="texto-entrada">
+          <a href="">
+            <h4>Terraza en el techo de tu casa</h4>
+          </a>
+          <p>Escrito en: <span>20/10/2019</span> por: <span>Rubén Palos Flores</em></p>
+          <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y ahorando dinero
+          </p>
+        </div>
+      </article>
 
-    <article>
-      <img src="img/blog2.jpg" alt="Entrada de blog">
-      <h4>Guia para la decoracion de tu hogar</h4>
-      <p>Escrito en: <em>20/10/2019</em> por: <em>Rubén Palos Flores</em></p>
-      <p>Maximia el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio</p>
-    </article>
-  </section>
+      <article class="entrada-blog">
+        <div class="imagen">
+          <img src="img/blog2.jpg" alt="Entrada de blog">
+        </div>
+        <div class="texto-entrada">
+          <a href="">
+            <h4>Guia para la decoracion de tu hogar</h4>
+          </a>
+          <p>Escrito en: <span>20/10/2019</span> por: <span>Rubén Palos Flores</span></p>
+          <p>Maximia el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu
+            espacio
+          </p>
+        </div>
+      </article>
+    </section>
 
-  <section>
-    <h3>Testimoniales</h3>
-    <header>Escrito por:</header>
-    <blockquote>El personal se comporto de una exclente forma muy buena atencion y la casa que me ofrecieron cumple con todas mis expectativas</blockquote>
-    <p>- Rubén Palos Flores</p>
-  </section>
 
-  <footer>
-    <nav class="navegacion"> 
-      <a href="nosotros.html">Nosotros</a>
-      <a href="anuncios.html">Anuncios</a>
-      <a href="blog.html">Blog</a>
-      <a href="contacto.html">Contacto</a>
-      <p>Todos los Derechos Reservados 2020 &copy;</p>
-    </nav>
+    <section class="testimoniales">
+      <h3 class="centrar-texto fw-300">Testimoniales</h3>
+      <div class="testimonial">
+        <blockquote>El personal se comporto de una exclente forma muy buena atencion y la casa que me ofrecieron cumple
+          con
+          todas mis expectativas</blockquote>
+        <p>- Rubén Palos Flores</p>
+      </div>
+    </section>
+  </div>
+
+  <footer class="site-footer seccion">
+    <div class="contenedor contenedor-footer">
+      <nav class="navegacion">
+        <a href="nosotros.html">Nosotros</a>
+        <a href="anuncios.html">Anuncios</a>
+        <a href="blog.html">Blog</a>
+        <a href="contacto.html">Contacto</a>
+      </nav>
+      <p class="copyright">Todos los Derechos Reservados 2020 &copy;</p>
+    </div>
   </footer>
 </body>
+
 </html>
